--- a/src/home.css
+++ b/src/home.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Benton Sans Light';
+    src: url(./fonts/BentonSans-Light.woff);
+    font-style: normal;
+    font-weight: 100;
+}
+
 html,
 body {
     margin: 0;
