--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: 'Benton Sans';
+    src: url(./fonts/BentonSans-Book.woff);
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: 'Benton Sans Medium';
+    src: url(./fonts/BentonSans-Medium.woff);
+    font-style: normal;
+    font-weight: bold;
+}
+
 html,
 body {
     margin: 0;
@@ -74,8 +88,14 @@ body {
     margin-left: -5px;
 }
 
-.color {
-    line-height: 18px;
+.format {
+    display: flex;
+    margin-top: 12px;
+    margin-bottom: 6px;
+}
+
+.ftext {
+    width: 130px;
 }
 
 .set {
@@ -130,7 +150,7 @@ button.button:focus {
     margin-bottom: 12px;
 }
 
-.formatting input[type="color"] {
+input[type="color"] {
     background-color: #fff;
     padding: 0;
     margin-left: 6px;
@@ -143,7 +163,7 @@ button.button:focus {
     margin-right: 90px;
 }
 
-.formatting input[type="color"]:focus {
+input[type="color"]:focus {
     outline: 0;
 }
 
