--- a/src/home.css
+++ b/src/home.css
@@ -72,17 +72,15 @@ body {
 a {
     color: #8739E6;
     font-weight: bold;
-    font-size: 18px;
-}
-
-a:hover {
     text-decoration: none;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 .gh {
+    font-size: 16px;
     text-align: center;
-    font-size: 14px;
     width: 100%;
-    display: flex;
-    justify-content: space-around;
 }
