--- a/src/style.css
+++ b/src/style.css
@@ -71,21 +71,15 @@ body {
     font-family: 'Benton Sans Medium';
     font-size: 12px;
     color: rgba(0, 0, 0, 0.8);
-    margin: 18px 0px;
+    margin: 30px 0px 18px 0px;
 }
 
-.config,
-.formatting {
+.section {
     margin-left: 10px;
 }
 
-.config p {
+.section p {
     margin-top: 0;
-}
-
-.check {
-    padding-bottom: 12px;
-    margin-left: -5px;
 }
 
 .format {
@@ -203,4 +197,16 @@ input[type="color"]:focus {
 
 .tooltiptext li {
     margin-top: 8px;
+}
+
+.label-text-field {
+    flex: 1;
+    margin-left: 0;
+    width: 100%;
+}
+
+.label-text-field>input {
+    font-family: 'Benton Sans';
+    margin-bottom: 5px;
+    margin-top: 3px;
 }
