--- a/sandboxed/src/style.css
+++ b/sandboxed/src/style.css
@@ -196,3 +196,132 @@ input[type="color"]:focus {
     margin-bottom: 5px;
     margin-top: 3px;
 }
+
+.icontainer {
+    font-size: 18px;
+    background: #FAFAFA;
+    color: #585858;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.box {
+    background: #ffffff;
+    max-width: 1250px;
+    margin: 20px;
+    display: flex;
+    box-shadow: 2px 4px 8px rgba(102, 162, 222, 0.15);
+}
+
+.left {
+    background: linear-gradient(to bottom left, #5496FF, #8739E6);
+    padding: 40px;
+    width: 450px;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    font-size: 20px;
+    font-family: 'Benton Sans Light', 'Segoe UI Light', sans-serif;
+}
+
+.right {
+    padding: 40px;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.iheader {
+    font-size: 64px;
+    font-family: 'Bookman Old Style', sans-serif;
+    margin: 10px 0px;
+    line-height: 54px;
+}
+
+.big {
+    font-size: 28px;
+    width: 100%;
+    margin: 5px 0px;
+}
+
+a {
+    color: #8739E6;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.gh {
+    font-size: 16px;
+    text-align: center;
+    width: 100%;
+}
+
+.dropdown-select {
+    width: 100%;
+    margin-bottom: 12px;
+}
+
+.label {
+    margin-bottom: 3px;
+    display: block;
+    font-size: 10px;
+    line-height: 10px;
+    order: 0;
+    color: rgba(0, 0, 0, 0.56);
+}
+
+.inputBox {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 48px;
+    margin-bottom: 13px;
+}
+
+.imgInput {
+    display: none;
+}
+
+.imgName {
+    text-align: right;
+}
+
+.imgExt {
+    margin-right: 30px;
+}
+
+.imgLabel {
+    border: 1px solid transparent;
+    border-color: var(--L6);
+    border-radius: 1px;
+    height: 24px;
+    min-width: 40px;
+    padding: 0 24px;
+    margin-left: 30px;
+    white-space: nowrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+}
+
+.imgLabel:hover {
+    border-color: var(--L8);
+}
+
+.imgLabel:active {
+    background-color: var(--L2);
+    border-color: var(--L9);
+}
